--- a/dev/styles/_setup.scss
+++ b/dev/styles/_setup.scss
@@ -4,3 +4,15 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 .clearfix:after {visibility: hidden; display: block; font-size: 0; content: " "; clear: both; height: 0; }
 
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+
+img {
+	display: block;
+	max-width: 100%;
+}
+
+.wrapper {
+	max-width: 1200px;
+	width: 80%;
+	margin: 0 auto;
+}
+
