--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -131,6 +131,94 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
-.container {
-  max-width: 900px;
+img {
+  display: block;
+  max-width: 100%; }
+
+.wrapper {
+  max-width: 1200px;
+  width: 80%;
   margin: 0 auto; }
+
+h1, h2, h3 {
+  font-family: 'Raleway', sans-serif; }
+
+h1 {
+  font-size: 2rem;
+  font-weight: 700;
+  text-transform: uppercase; }
+
+a, ul, li {
+  font-family: 'Raleway', sans-serif;
+  font-size: 1rem;
+  text-transform: uppercase;
+  list-style: none;
+  text-decoration: none; }
+
+header {
+  border-bottom: 1px solid #808080; }
+
+.headerLinks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+  .headerLinks ul {
+    list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 0;
+    margin: 15px 0; }
+    .headerLinks ul a {
+      text-decoration: none;
+      color: #000000; }
+
+.navLinks {
+  position: relative; }
+
+.navLinks::after {
+  content: '|';
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%); }
+
+.navLinks li {
+  margin-right: 20px;
+  position: relative; }
+
+.socialLinks li {
+  margin-left: 10px; }
+
+.title {
+  text-align: center;
+  margin: 30px 0; }
+
+.navUpper ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0;
+  margin: 0 auto;
+  padding: 15px 0;
+  border-top: 1px solid #808080;
+  border-bottom: 1px solid #808080;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+  .navUpper ul li {
+    padding: 0 10px; }
+  .navUpper ul a {
+    padding: 0 5px;
+    color: #000000; }
+
+.imageGallery {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+figure {
+  width: 33.33%; }
