--- a/dev/styles/_main-section.scss
+++ b/dev/styles/_main-section.scss
@@ -6,7 +6,6 @@
 .navUpper ul {
 	display: flex;
 	padding: 0;
-	// max-width: 40%;
 	margin: 0 auto;
 	padding: 15px 0;
 	border-top: 1px solid $secondaryColor;
@@ -15,8 +14,16 @@
 	li {
 		padding: 0 10px;
 	}
-	a {
-		padding: 0 5px;
-		color: $primaryColor;
+}
+
+.navUpper a {
+	padding: 5px;
+	color: $primaryColor;
+	&:hover {
+		font-weight: bold,
 	}
+}
+
+main img {
+	margin: 30px 0;
 }
