Styling up to About section

--- a/dev/styles/_about-section.scss
+++ b/dev/styles/_about-section.scss
@@ -35,3 +35,14 @@
 	right: 0;
 	border: 1px solid $secondaryColor;
 }
+
+.columns {
+	column-count: 3;
+	column-gap: 30px;
+	p {
+		margin: 0 0 15px 0;
+		line-height: 1.75;
+		text-align: justify;
+	}
+}
+
