--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -1,6 +1,6 @@
 @import 'setup';
 @import 'fonts-and-colors';
-@import 'header';
+@import 'header-section';
 @import 'main-section';
 @import 'about-section';
-@import 'gallery';
+@import 'gallery-section';
