--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -4,3 +4,6 @@
 @import 'main-section';
 @import 'about-section';
 @import 'gallery-section';
+@import 'contact-section';
+@import 'navigation-lower-section';
+@import 'footer-section';
