--- a/dev/styles/_main-section.scss
+++ b/dev/styles/_main-section.scss
@@ -3,7 +3,7 @@
 	margin: 30px 0;
 }
 
-.navUpper ul {
+.navigation ul {
 	display: flex;
 	padding: 0;
 	margin: 0 auto;
@@ -16,7 +16,7 @@
 	}
 }
 
-.navUpper a {
+.navigation a {
 	padding: 5px;
 	color: $primaryColor;
 	&:hover {
