--- a/dev/styles/_header-section.scss
+++ b/dev/styles/_header-section.scss
@@ -28,7 +28,7 @@ header {
 	transform: translateX(-50%);
 }
 
-.navLinks a, .socialLinks a {
+.navLinks a {
 	padding: 5px 0;
 	&:hover {
 		font-weight: bold;
