--- a/dev/styles/_setup.scss
+++ b/dev/styles/_setup.scss
@@ -38,6 +38,7 @@ img {
     color: darken(#CE2029, 10);
     border: 1px solid darken(#CE2029, 10);	
     padding: 10px;
+    text-align: center;
 }
 
 .skip-link:focus {
