--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -161,7 +161,8 @@ img {
   background: #f6c4c7;
   color: #a21920;
   border: 1px solid #a21920;
-  padding: 10px; }
+  padding: 10px;
+  text-align: center; }
 
 .skip-link:focus {
   left: 50%;
@@ -338,7 +339,13 @@ main img {
   margin: 0 auto 30px auto;
   background: none;
   border: 1px solid #000000;
-  padding: 10px 15px; }
+  padding: 10px 15px;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s; }
+  .showOverflow:hover {
+    color: #a21920;
+    border: 1px solid #a21920;
+    background-color: #f6c4c7; }
 
 figure {
   margin-top: 30px;
@@ -441,28 +448,31 @@ figure:hover figcaption {
 .contact h4 {
   margin-top: 0; }
 
-.contact form {
-  width: 35%;
-  margin: 0 auto;
+.contactForm {
   display: grid;
   grid-template-columns: 2fr 1fr;
-  grid-gap: 5px; }
-  .contact form input[type=email] {
+  grid-gap: 5px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 35%;
+  margin: 0 auto; }
+  .contactForm input[type=email] {
     grid-column: 1/2;
     font-family: 'Noto Serif', serif;
     font-style: italic;
     color: #000000; }
-  .contact form input[type=submit] {
+  .contactForm input[type=submit] {
     grid-column: 2/3;
     font-family: 'Raleway', sans-serif;
     text-transform: uppercase;
     -webkit-transition: all 0.3s;
     transition: all 0.3s; }
-    .contact form input[type=submit]:hover {
+    .contactForm input[type=submit]:hover {
       color: #a21920;
       border: 1px solid #a21920;
       background-color: #f6c4c7; }
-  .contact form input[type=email], .contact form input[type=submit] {
+  .contactForm input[type=email], .contactForm input[type=submit] {
     border: 1px solid #000000;
     text-align: center;
     padding: 10px; }
