Base styling for tablet responsive complete

--- a/dev/styles/_contact-section.scss
+++ b/dev/styles/_contact-section.scss
@@ -44,5 +44,11 @@
 }
 
 @media (max-width: 768px) {
-
+	.contactForm {
+		width: 75%;
+	}
+	.mobileWrapper {
+		width: 95%;
+		margin: 0 auto;
+	}
 }
