--- a/dev/styles/_about-section.scss
+++ b/dev/styles/_about-section.scss
@@ -1,7 +1,7 @@
 .headerStyling {
 	margin-top: 30px;
 	display: grid;
-	grid-template-columns: 1fr 10% 1fr;
+	grid-template-columns: 1fr auto 1fr;
 	grid-column-gap: 15px;
 	align-items: center;
 }
@@ -48,9 +48,6 @@
 }
 
 @media (max-width: 768px) {
-	.headerStyling {
-		grid-template-columns: 1fr 20% 1fr;
-	}
 	.columns {
 		column-count: 2;
 		column-gap: 15px;
