--- a/dev/styles/_footer-section.scss
+++ b/dev/styles/_footer-section.scss
@@ -22,3 +22,16 @@
 		}
 	}
 }
+
+@media (max-width: 425px) {
+	footer {
+		margin-bottom: 70px;
+		border-bottom: 1px solid $secondaryColor;
+		.footerContainer {
+			justify-content: center;
+			.socialLinks {
+				display: none;
+			}
+		}
+	}
+}
