--- a/dev/styles/_contact-section.scss
+++ b/dev/styles/_contact-section.scss
@@ -11,6 +11,7 @@
 .contactForm {
 	display: grid;
 	grid-template-columns: 2fr 1fr;
+	grid-template-rows: auto;
 	grid-gap: 5px;
 	justify-content: center;
 	width: 35%;
@@ -52,3 +53,26 @@
 		margin: 0 auto;
 	}
 }
+
+@media (max-width: 425px) {
+	.contact {
+		border-bottom: 1px solid $secondaryColor;
+	}
+	.contactForm {
+		width: 100%;
+		grid-row-gap: 10px;
+		input[type=email] {
+			grid-column: 1/3;
+			grid-row: 1/2;
+		}
+		input[type=submit] {
+			grid-column: 1/3;
+			grid-row: 2/3;
+		}
+	}
+}
+
+
+
+
+
