--- a/dev/styles/_gallery-section.scss
+++ b/dev/styles/_gallery-section.scss
@@ -6,8 +6,7 @@
 	column-count: 3;
 	column-width: 33.33%;
 	column-gap: 30px;
-	margin-top: 30px;
-	margin-bottom: 40px;
+	margin: 30px 0;
 }
 
 .showOverflow {
@@ -134,8 +133,20 @@ figure:hover figcaption {
 	}
 }
 
-
-
+@media (max-width: 425px) {
+	.gallery h2 {
+		margin: 0;
+	}
+	.imageGallery {
+		column-count: 1;
+		margin-top: 0;
+		figure {
+			&:first-child {
+				margin-top: 15px;
+			}
+		}
+	}
+}
 
 
 
