--- a/dev/styles/_main-section.scss
+++ b/dev/styles/_main-section.scss
@@ -37,5 +37,22 @@ main img {
 		li {
 			padding: 0;
 		}
+		a {
+			padding: 0;
+		}
+	}
+}
+
+@media (max-width: 425px) {
+	.navigation {
+		display: none;
+	}
+	.title {
+		margin-top: 15px;
+		padding-bottom: 15px;
+		border-bottom: 1px solid $secondaryColor;
+	}
+	main img {
+		margin-top: 0;
 	}
 }
