--- a/dev/styles/_gallery-section.scss
+++ b/dev/styles/_gallery-section.scss
@@ -9,7 +9,7 @@
 	margin: 30px 0;
 }
 
-.showOverflow {
+.toggleOverflow {
 	display: none;
 	margin: 0 auto 30px auto;
 	background: none;
@@ -29,10 +29,6 @@ figure {
 		margin-top: 0;
 	}
 	position: relative;
-}
-
-.galleryOverflow figure:first-child {
-	margin-top: 30px;
 }
 
 figcaption {
@@ -125,10 +121,10 @@ figure:hover figcaption {
 			}
 		}
 	}
-	.galleryOverflow.hidden {
+	figure:nth-child(6) ~ figure {
 		display: none;
 	}
-	.showOverflow {
+	.toggleOverflow {
 		display: block;
 	}
 }
