--- a/dev/styles/_header-section.scss
+++ b/dev/styles/_header-section.scss
@@ -40,6 +40,10 @@ header {
 	position: relative;
 }
 
+.mobileMenu {
+	display: none;
+}
+
 .socialLinks li {
 	margin-left: 10px;
 }
@@ -59,7 +63,25 @@ header {
 		border-top: 1px solid $secondaryColor;
 		padding: 10px 0;
 	}
-	.socialLinks li {
-		margin-left: 20px;
+	header i {
+		font-size: 1.5rem;
+	}
+	.socialLinks {
+		width: 50%;
+		text-align: right;
+		display: flex;
+		justify-content: space-between;
+		li {
+			margin: 0;
+		}
+	}
+	.navLinks::after {
+		display: none;
+	}
+	.navLinks li:first-child, .navLinks li:nth-child(2) {
+		display: none;
+	}
+	.mobileMenu {
+		display: block;
 	}
 }
