--- a/dev/styles/_main-section.scss
+++ b/dev/styles/_main-section.scss
@@ -44,9 +44,6 @@ main img {
 }
 
 @media (max-width: 425px) {
-	.navigation {
-		display: none;
-	}
 	.title {
 		margin-top: 15px;
 		padding-bottom: 15px;
@@ -54,5 +51,37 @@ main img {
 	}
 	main img {
 		margin-top: 0;
+	}
+	.navUpper {
+		position: fixed;
+		top: 0;
+		bottom: 77px;
+		left: 0;
+		right: 0;
+		z-index: 200;
+		background: white;
+		border: none;
+		transition: all 0.3s ease-in;
+		ul {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			position: absolute;
+			top: 50%;
+			width: 100%;
+			transform: translateY(-50%);
+			li {
+				margin-bottom: 20px;
+				&:last-child {
+					margin-bottom: 0;
+				}
+				a {
+					font-size: 2rem;
+				}
+			}
+		}
+	}
+	.navUpper.hidden {
+		left: 1000px;
 	}
 }
