--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -231,6 +231,9 @@ header {
   margin-right: 20px;
   position: relative; }
 
+.mobileMenu {
+  display: none; }
+
 .socialLinks li {
   margin-left: 10px; }
 
@@ -248,8 +251,25 @@ header {
     z-index: 200;
     border-top: 1px solid #808080;
     padding: 10px 0; }
-  .socialLinks li {
-    margin-left: 20px; } }
+  header i {
+    font-size: 1.5rem; }
+  .socialLinks {
+    width: 50%;
+    text-align: right;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+    .socialLinks li {
+      margin: 0; }
+  .navLinks::after {
+    display: none; }
+  .navLinks li:first-child, .navLinks li:nth-child(2) {
+    display: none; }
+  .mobileMenu {
+    display: block; } }
 
 .title {
   text-align: center;
@@ -292,14 +312,47 @@ main img {
       padding: 0; } }
 
 @media (max-width: 425px) {
-  .navigation {
-    display: none; }
   .title {
     margin-top: 15px;
     padding-bottom: 15px;
     border-bottom: 1px solid #808080; }
   main img {
-    margin-top: 0; } }
+    margin-top: 0; }
+  .navUpper {
+    position: fixed;
+    top: 0;
+    bottom: 77px;
+    left: 0;
+    right: 0;
+    z-index: 200;
+    background: white;
+    border: none;
+    -webkit-transition: all 0.3s ease-in;
+    transition: all 0.3s ease-in; }
+    .navUpper ul {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      position: absolute;
+      top: 50%;
+      width: 100%;
+      -webkit-transform: translateY(-50%);
+              transform: translateY(-50%); }
+      .navUpper ul li {
+        margin-bottom: 20px; }
+        .navUpper ul li:last-child {
+          margin-bottom: 0; }
+        .navUpper ul li a {
+          font-size: 2rem; }
+  .navUpper.hidden {
+    left: 1000px; } }
 
 .headerStyling {
   margin-top: 30px;
@@ -376,7 +429,7 @@ main img {
           column-gap: 30px;
   margin: 30px 0; }
 
-.showOverflow {
+.toggleOverflow {
   display: none;
   margin: 0 auto 30px auto;
   background: none;
@@ -384,7 +437,7 @@ main img {
   padding: 10px 15px;
   -webkit-transition: all 0.3s;
   transition: all 0.3s; }
-  .showOverflow:hover {
+  .toggleOverflow:hover {
     color: #a21920;
     border: 1px solid #a21920;
     background-color: #f6c4c7; }
@@ -394,9 +447,6 @@ figure {
   position: relative; }
   figure:first-child {
     margin-top: 0; }
-
-.galleryOverflow figure:first-child {
-  margin-top: 30px; }
 
 figcaption {
   display: none;
@@ -477,9 +527,9 @@ figure:hover figcaption {
       margin-top: 15px; }
       .imageGallery figure:first-child {
         margin-top: 0; }
-  .galleryOverflow.hidden {
+  figure:nth-child(6) ~ figure {
     display: none; }
-  .showOverflow {
+  .toggleOverflow {
     display: block; } }
 
 @media (max-width: 425px) {
@@ -565,6 +615,10 @@ figure:hover figcaption {
     width: 95%;
     margin: 0 auto; } }
 
+@media (max-width: 425px) {
+  .navLower {
+    display: none; } }
+
 .footerContainer {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -593,7 +647,7 @@ figure:hover figcaption {
 
 @media (max-width: 425px) {
   footer {
-    margin-bottom: 70px;
+    margin-bottom: 76px;
     border-bottom: 1px solid #808080; }
     footer .footerContainer {
       -webkit-box-pack: center;
