--- a/dev/styles/_footer-section.scss
+++ b/dev/styles/_footer-section.scss
@@ -25,6 +25,7 @@
 
 @media (max-width: 425px) {
 	footer {
+		background: lightgrey;
 		margin-bottom: 76px;
 		border-bottom: 1px solid $secondaryColor;
 		.footerContainer {
