--- a/dev/styles/_main-section.scss
+++ b/dev/styles/_main-section.scss
@@ -1,6 +1,6 @@
 .title {
 	text-align: center;
-	margin: 30px 0;
+	margin: 40px 0;
 }
 
 .navigation ul {
@@ -59,7 +59,7 @@ main img {
 		left: 0;
 		right: 0;
 		z-index: 200;
-		background: white;
+		background: lightgrey;
 		border: none;
 		transition: all 0.3s ease-in;
 		ul {
