--- a/dev/styles/_setup.scss
+++ b/dev/styles/_setup.scss
@@ -39,6 +39,7 @@ img {
     border: 1px solid darken(#CE2029, 10);	
     padding: 10px;
     text-align: center;
+    font-weight: 700;
 }
 
 .skip-link:focus {
