--- a/dev/styles/_about-section.scss
+++ b/dev/styles/_about-section.scss
@@ -1,40 +1,27 @@
-.headerStyling {
+// Heading class referring to both About and Gallery sections
+
+.heading {
 	margin-top: 30px;
-	display: grid;
-	grid-template-columns: 1fr auto 1fr;
-	grid-column-gap: 15px;
-	align-items: center;
-}
-
-.headerStyling h2 {
-	grid-column: 2/3;
 	text-align: center;
-}
-
-.lineBefore {
-	grid-column: 1/2;
 	position: relative;
 }
 
-.lineBefore span::before {
+.heading::before, .heading::after {
 	content: '';
 	position: absolute;
-	left: 0;
-	right: 0;
-	border-bottom: 1px solid $secondaryColor;
+	width: calc(50% - 80px);
+	height: 1px;
+	top: 50%;
+	transform: translateY(-50%);
+	background-color: $secondaryColor;
 }
 
-.lineAfter {
-	grid-column: 3/4;
-	position: relative;
+.heading::before {
+	left: 0;
 }
 
-.lineAfter span::before {
-	content: '';
-	position: absolute;
-	left: 0;
+.heading::after {
 	right: 0;
-	border-bottom: 1px solid $secondaryColor;
 }
 
 .columns {
@@ -42,8 +29,9 @@
 	column-gap: 30px;
 	p {
 		margin: 0 0 10px 0;
-		line-height: 1.75;
+		line-height: 1.8;
 		text-align: justify;
+		font-weight: 500;
 	}
 }
 
