--- a/dev/styles/_main-section.scss
+++ b/dev/styles/_main-section.scss
@@ -23,7 +23,7 @@
 	padding: 5px;
 	color: $primaryColor;
 	&:hover {
-		font-weight: bold,
+		font-weight: 800;
 	}
 }
 
@@ -77,7 +77,7 @@ main img {
 				}
 				a {
 					font-size: 2rem;
-				}
+				}			
 			}
 		}
 	}
